--- a/pom.xml
+++ b/pom.xml
@@ -18,9 +18,15 @@
 		<!--<jdbc.driver.groupId>com.h2database</jdbc.driver.groupId>
 		<jdbc.driver.artifactId>h2</jdbc.driver.artifactId>
 		<jdbc.driver.version>${h2.version}</jdbc.driver.version>-->
+		<!-- mysql
         <jdbc.driver.groupId>mysql</jdbc.driver.groupId>
         <jdbc.driver.artifactId>mysql-connector-java</jdbc.driver.artifactId>
         <jdbc.driver.version>5.1.22</jdbc.driver.version>
+         -->
+         <!-- oracle driver -->
+         <jdbc.driver.groupId>com.oracle</jdbc.driver.groupId>
+        <jdbc.driver.artifactId>ojdbc14</jdbc.driver.artifactId>
+        <jdbc.driver.version>10.2.0.4.0</jdbc.driver.version> 
 	</properties>
 
 	<!-- 依赖项定义 -->
