--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,10 +6,10 @@
 
 
 #database setting oracle
-jdbc.driver=oracle.jdbc.driver.OracleDriver
-jdbc.url=jdbc:oracle:thin:@(DESCRIPTION =(ADDRESS_LIST = (ADDRESS = (PROTOCOL = TCP)(HOST = 10.1.187.163)(PORT = 1521)) (ADDRESS = (PROTOCOL = TCP)(HOST = 10.1.187.164)(PORT = 1521)) )(CONNECT_DATA = (SERVER = DEDICATED) (SERVICE_NAME = ora11g)))
-jdbc.username=jhpt_ky
-jdbc.password=jhpt_ky
+oracle.jdbc.driver=oracle.jdbc.driver.OracleDriver
+oracle.jdbc.url=jdbc:oracle:thin:@(DESCRIPTION =(ADDRESS_LIST = (ADDRESS = (PROTOCOL = TCP)(HOST = 10.1.187.163)(PORT = 1521)) (ADDRESS = (PROTOCOL = TCP)(HOST = 10.1.187.164)(PORT = 1521)) )(CONNECT_DATA = (SERVER = DEDICATED) (SERVICE_NAME = ora11g)))
+oracle.jdbc.username=jhpt_ky
+oracle.jdbc.password=jhpt_ky
 
 
 #log4jdbc driver
