--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -17,7 +17,7 @@
 	<!-- 設定Spring Context的默认Profile -->
 	<context-param>
     	<param-name>spring.profiles.default</param-name>
-    	<param-value>production</param-value>
+    	<param-value>oracle</param-value>
 	</context-param>
 
 	<!--Spring ApplicationContext 载入 -->
