--- a/pom.xml
+++ b/pom.xml
@@ -4,17 +4,21 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.railway.com</groupId>
 	<artifactId>trainplan</artifactId>
+    <version>0.1.0</version>
 	<packaging>war</packaging>
 	<name>trainplan</name>
 
 	<!-- 项目属性 -->
 	<properties>
-		<!--<jdbc.driver.groupId>com.h2database</jdbc.driver.groupId>
-		<jdbc.driver.artifactId>h2</jdbc.driver.artifactId>
-		<jdbc.driver.version>${h2.version}</jdbc.driver.version>-->
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jdbc.driver.groupId>mysql</jdbc.driver.groupId>
         <jdbc.driver.artifactId>mysql-connector-java</jdbc.driver.artifactId>
         <jdbc.driver.version>5.1.22</jdbc.driver.version>
+        <springside.version>4.2.2.GA</springside.version>
+        <org.springframework.version>4.0.4.RELEASE</org.springframework.version>
+        <org.hibernate.version>4.2.12.Final</org.hibernate.version>
+        <com.fasterxml.jackson.version>2.3.3</com.fasterxml.jackson.version>
+        <org.slf4j.version>1.7.7</org.slf4j.version>
 	</properties>
 
 	<!-- 依赖项定义 -->
@@ -23,22 +27,38 @@
 		<dependency>
 			<groupId>org.springside</groupId>
 			<artifactId>springside-core</artifactId>
+            <version>${springside.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springside</groupId>
 			<artifactId>springside-extension</artifactId>
+            <version>${springside.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springside</groupId>
 			<artifactId>springside-metrics</artifactId>
+            <version>${springside.version}</version>
 		</dependency>
 		<!-- SPRINGSIDE end -->
 
 		<!-- SPRING basic begin -->
 		<!-- email/scheduler/freemarker -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>${org.springframework.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aop</artifactId>
+            <version>${org.springframework.version}</version>
+        </dependency>
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context-support</artifactId>
+            <version>${org.springframework.version}</version>
 		</dependency>
 		<!-- SPRING basic end -->
 		<!-- SPRING end -->
@@ -47,10 +67,12 @@
 		<dependency>
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjrt</artifactId>
+            <version>1.8.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjweaver</artifactId>
+            <version>1.8.0</version>
 		</dependency>
 		<!-- AOP end -->
 
@@ -59,32 +81,38 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
+            <version>${org.hibernate.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-ehcache</artifactId>
+            <version>${org.hibernate.version}</version>
 		</dependency>
 
 		<!-- mybatis -->
 		<dependency>
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis</artifactId>
+            <version>3.2.7</version>
 		</dependency>
 		<dependency>
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis-spring</artifactId>
+            <version>1.2.2</version>
 		</dependency>
 
 		<!-- spring data access -->
 		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-jpa</artifactId>
+            <version>1.5.2.RELEASE</version>
 		</dependency>
 
 		<!-- connection pool -->
 		<dependency>
 			<groupId>org.apache.tomcat</groupId>
 			<artifactId>tomcat-jdbc</artifactId>
+            <version>8.0.5</version>
 		</dependency>
 
 		<!-- jdbc driver -->
@@ -94,26 +122,36 @@
 			<version>${jdbc.driver.version}</version>
 			<scope>runtime</scope>
 		</dependency>
+
+        <dependency>
+            <groupId>com.oracle</groupId>
+            <artifactId>ojdbc6</artifactId>
+            <version>11.2.0</version>
+        </dependency>
 		<!-- PERSISTENCE end -->
 
 		<!-- WEB begin -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
+            <version>${org.springframework.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>opensymphony</groupId>
 			<artifactId>sitemesh</artifactId>
+            <version>2.4.2</version>
 		</dependency>
 
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
+            <version>1.2</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
 		</dependency>
 		<!-- WEB end -->
 
@@ -121,10 +159,12 @@
 		<dependency>
 			<groupId>org.apache.shiro</groupId>
 			<artifactId>shiro-spring</artifactId>
+            <version>1.2.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.shiro</groupId>
 			<artifactId>shiro-ehcache</artifactId>
+            <version>1.2.3</version>
 		</dependency>
 		<!-- SECURITY end -->
 
@@ -132,10 +172,12 @@
 		<dependency>
 			<groupId>org.apache.cxf</groupId>
 			<artifactId>cxf-rt-frontend-jaxws</artifactId>
+            <version>2.7.11</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.cxf</groupId>
 			<artifactId>cxf-rt-transports-http</artifactId>
+            <version>2.7.11</version>
 		</dependency>
 		<!-- SOAP end -->
 
@@ -143,10 +185,12 @@
 		<dependency>
 			<groupId>org.apache.cxf</groupId>
 			<artifactId>cxf-rt-frontend-jaxrs</artifactId>
+            <version>2.7.11</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.jaxrs</groupId>
 			<artifactId>jackson-jaxrs-json-provider</artifactId>
+            <version>${com.fasterxml.jackson.version}</version>
 		</dependency>
 		<!-- JAX-RS end -->
 
@@ -154,14 +198,17 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jms</artifactId>
+            <version>${org.springframework.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.activemq</groupId>
 			<artifactId>activemq-core</artifactId>
+            <version>5.7.0</version>
 		</dependency>
 		<!-- JMS end -->
 
+        <!-- rest client -->
         <dependency>
             <groupId>com.sun.jersey</groupId>
             <artifactId>jersey-client</artifactId>
@@ -172,23 +219,13 @@
 		<dependency>
 			<groupId>org.quartz-scheduler</groupId>
 			<artifactId>quartz</artifactId>
-		</dependency>
-
-		<!-- Redis -->
-		<dependency>
-			<groupId>redis.clients</groupId>
-			<artifactId>jedis</artifactId>
-		</dependency>
-
-		<!-- CACHE begin -->
-		<dependency>
-			<groupId>net.spy</groupId>
-			<artifactId>spymemcached</artifactId>
+            <version>2.2.1</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.thimbleware.jmemcached</groupId>
 			<artifactId>jmemcached-core</artifactId>
+            <version>1.0.0</version>
 			<!-- 为演示而改为runtime -->
 			<scope>runtime</scope>
 		</dependency>
@@ -196,34 +233,26 @@
 		<dependency>
 			<groupId>net.sf.ehcache</groupId>
 			<artifactId>ehcache-core</artifactId>
+            <version>2.6.9</version>
 		</dependency>
 		<!-- CACHE end -->
-
-		<!-- jolokia Restful JMX -->
-		<dependency>
-			<groupId>org.jolokia</groupId>
-			<artifactId>jolokia-core</artifactId>
-		</dependency>
-
-		<!-- hystrix -->
-		<dependency>
-			<groupId>com.netflix.hystrix</groupId>
-			<artifactId>hystrix-core</artifactId>
-		</dependency>
 
 		<!-- MONITOR begin -->
 		<!-- javasimon -->
 		<dependency>
 			<groupId>org.javasimon</groupId>
 			<artifactId>javasimon-spring</artifactId>
+            <version>3.5.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.javasimon</groupId>
 			<artifactId>javasimon-jdbc4</artifactId>
+            <version>3.5.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.javasimon</groupId>
 			<artifactId>javasimon-console-embed</artifactId>
+            <version>3.5.0</version>
 		</dependency>
 		<!-- MONITOR end -->
 
@@ -231,31 +260,37 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
+            <version>5.1.1.Final</version>
 		</dependency>
 
 		<!-- JSON -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
+            <version>${com.fasterxml.jackson.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.module</groupId>
 			<artifactId>jackson-module-jaxb-annotations</artifactId>
+            <version>${com.fasterxml.jackson.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.datatype</groupId>
 			<artifactId>jackson-datatype-joda</artifactId>
+            <version>${com.fasterxml.jackson.version}</version>
 		</dependency>
 
 		<!-- XML begin -->
 		<dependency>
 			<groupId>dom4j</groupId>
 			<artifactId>dom4j</artifactId>
+            <version>1.6</version>
 		</dependency>
 
 		<dependency>
 			<groupId>jaxen</groupId>
 			<artifactId>jaxen</artifactId>
+            <version>1.1.6</version>
 		</dependency>
 		<!-- XML end -->
 
@@ -263,29 +298,35 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
+            <version>${org.slf4j.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
+            <version>1.1.2</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>log4j-over-slf4j</artifactId>
+            <version>${org.slf4j.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>jcl-over-slf4j</artifactId>
+            <version>${org.slf4j.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>jul-to-slf4j</artifactId>
+            <version>${org.slf4j.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.googlecode.log4jdbc</groupId>
 			<artifactId>log4jdbc</artifactId>
+            <version>1.2</version>
 		</dependency>
 		<!-- LOGGING end -->
 
@@ -293,239 +334,38 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
+            <version>3.3.2</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
+            <version>2.4</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-codec</groupId>
 			<artifactId>commons-codec</artifactId>
+            <version>1.9</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
+            <version>17.0</version>
 		</dependency>
 
 		<dependency>
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
+            <version>2.3</version>
 		</dependency>
 		<!-- GENERAL UTILS end -->
 
 		<!-- OTHER TOOLS begin -->
 		<dependency>
-			<groupId>org.freemarker</groupId>
-			<artifactId>freemarker</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.apache.httpcomponents</groupId>
-			<artifactId>fluent-hc</artifactId>
-		</dependency>
-
-		<dependency>
 			<groupId>net.sf.dozer</groupId>
 			<artifactId>dozer</artifactId>
+            <version>5.5.1</version>
 		</dependency>
 
-		<!-- email -->
-		<dependency>
-			<groupId>javax.mail</groupId>
-			<artifactId>mail</artifactId>
-		</dependency>
 		<!-- OTHER TOOLS end -->
-
-		<!-- TEST begin -->
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<!-- for xxxDemo class -->
-			<scope>compile</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.assertj</groupId>
-			<artifactId>assertj-core</artifactId>
-			<scope>compile</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.mockito</groupId>
-			<artifactId>mockito-core</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.powermock</groupId>
-			<artifactId>powermock-module-junit4</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.powermock</groupId>
-			<artifactId>powermock-api-mockito</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springside</groupId>
-			<artifactId>springside-core</artifactId>
-			<classifier>tests</classifier>
-			<!-- for xxxDemo class -->
-			<scope>compile</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springside</groupId>
-			<artifactId>springside-extension</artifactId>
-			<classifier>tests</classifier>
-			<!-- for xxxDemo class -->
-			<scope>compile</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-test</artifactId>
-			<!-- for xxxDemo class -->
-			<scope>compile</scope>
-		</dependency>
-
-		<!-- selenium 2.0 -->
-		<dependency>
-			<groupId>org.seleniumhq.selenium</groupId>
-			<artifactId>selenium-java</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.seleniumhq.selenium</groupId>
-			<artifactId>selenium-remote-driver</artifactId>
-		</dependency>
-
-		<!-- jetty for functional test and executable war -->
-		<dependency>
-			<groupId>org.eclipse.jetty.aggregate</groupId>
-			<artifactId>jetty-webapp</artifactId>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.jetty</groupId>
-			<artifactId>jetty-jsp</artifactId>
-			<scope>provided</scope>
-		</dependency>
-		
-		<!-- h2 如果生产数据库不是H2，解开下面的注释
-		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-		</dependency>
-		-->
 	</dependencies>
-
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-framework-bom</artifactId>
-				<version>${spring.version}</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
-
-	<build>
-		<plugins>
-			<!-- 增加functional test的Source目录 -->
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>build-helper-maven-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>add-functional-source</id>
-						<phase>generate-sources</phase>
-						<goals>
-							<goal>add-test-source</goal>
-						</goals>
-						<configuration>
-							<sources>
-								<source>src/test/functional</source>
-							</sources>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-
-			<!-- test插件, 设定內存 -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<configuration>
-					<argLine>-Xmx256M</argLine>
-				</configuration>
-			</plugin>
-
-			<!-- cobertura插件, 取消不需要计算覆盖率的类 -->
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>cobertura-maven-plugin</artifactId>
-				<configuration>
-					<instrumentation>
-						<excludes>
-							<exclude>**/entity/*.class</exclude>
-							<exclude>**/dto/*.class</exclude>
-							<exclude>**/*Controller.class</exclude>
-							<exclude>**/*Demo.class</exclude>
-						</excludes>
-					</instrumentation>
-				</configuration>
-			</plugin>
-
-			<!-- jetty插件, 设定context path与spring profile -->
-			<plugin>
-				<groupId>org.mortbay.jetty</groupId>
-				<artifactId>jetty-maven-plugin</artifactId>
-				<configuration>
-					<systemProperties>
-						<systemProperty>
-							<name>spring.profiles.active</name>
-							<value>development</value>
-						</systemProperty>
-					</systemProperties>
-					<useTestClasspath>true</useTestClasspath>
-					<webAppConfig>
-						<contextPath>/${project.artifactId}</contextPath>
-					</webAppConfig>
-				</configuration>
-			</plugin>
-
-			<!-- tomcat7 插件 -->
-			<plugin>
-				<groupId>org.apache.tomcat.maven</groupId>
-				<artifactId>tomcat7-maven-plugin</artifactId>
-				<configuration>
-					<systemProperties>
-						<spring.profiles.active>development</spring.profiles.active>
-					</systemProperties>
-					<useTestClasspath>true</useTestClasspath>
-				</configuration>
-			</plugin>
-
-			<!-- enforcer插件, 规则统一定义在parent -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-enforcer-plugin</artifactId>
-			</plugin>
-
-			<!-- cxf wsdl2java 插件 -->
-			<plugin>
-				<groupId>org.apache.cxf</groupId>
-				<artifactId>cxf-codegen-plugin</artifactId>
-				<version>${cxf.version}</version>
-				<configuration>
-					<sourceRoot>${basedir}/target/generated-sources/cxf</sourceRoot>
-					<wsdlOptions>
-						<wsdlOption>
-							<wsdl>${basedir}/target/wsdl/accountservice.wsdl</wsdl>
-						</wsdlOption>
-					</wsdlOptions>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
 </project>
