--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	version="2.5">
 
-	<display-name>showcase</display-name>
+	<display-name>TrainPlan</display-name>
 	
 	<!-- Spring ApplicationContext配置文件的路径,可使用通配符，用于后面的Spring Context Loader -->
 	<context-param>
@@ -17,7 +17,7 @@
 	<!-- 設定Spring Context的默认Profile -->
 	<context-param>
     	<param-name>spring.profiles.default</param-name>
-    	<param-value>oracle</param-value>
+    	<param-value>production</param-value>
 	</context-param>
 
 	<!--Spring ApplicationContext 载入 -->
@@ -40,14 +40,6 @@
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 
-	<servlet>
-		<servlet-name>CXFServlet</servlet-name>
-		<servlet-class>org.apache.cxf.transport.servlet.CXFServlet</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>CXFServlet</servlet-name>
-		<url-pattern>/cxf/*</url-pattern>
-	</servlet-mapping>
 	<!--
 	&lt;!&ndash; JMX JSON Agent Servlet&ndash;&gt;
 	<servlet>
