--- a/pom.xml
+++ b/pom.xml
@@ -217,7 +217,13 @@
 			<artifactId>jackson-datatype-joda</artifactId>
             <version>${com.fasterxml.jackson.version}</version>
 		</dependency>
-
+		
+       	<dependency>
+			<groupId>net.sf.json-lib</groupId>
+			<artifactId>json-lib</artifactId>
+			<version>2.4</version>
+			<classifier>jdk15</classifier>
+		</dependency>
 		<!-- XML begin -->
 		<dependency>
 			<groupId>dom4j</groupId>
