--- a/pom.xml
+++ b/pom.xml
@@ -344,6 +344,12 @@
 			<artifactId>httpclient</artifactId>
 			<version>4.3.3</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.2</version>
+		</dependency>
+            
 
 
 		<!-- OTHER TOOLS end -->
