--- a/pom.xml
+++ b/pom.xml
@@ -326,5 +326,13 @@
 			<version>1.2</version>
 		</dependency>
 		<!-- OTHER TOOLS end -->
+		
+		
+		<dependency>
+			<groupId>org.directwebremoting</groupId>
+	  		<artifactId>dwr</artifactId>
+	  		<!--<version>2.0.10</version> -->
+	  	 	<version>3.0.rc2</version>
+	  	</dependency>
 	</dependencies>
 </project>
