--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -138,4 +138,31 @@
         <error-code>404</error-code>
         <location>/WEB-INF/views/error/404.jsp</location>
     </error-page>
+    
+    
+    
+    <!-- dwr config -->
+    <servlet>
+        <servlet-name>dwr-invoker</servlet-name>
+        <servlet-class>
+        	org.directwebremoting.servlet.DwrServlet
+            <!-- org.directwebremoting.spring.DwrSpringServlet -->
+        </servlet-class>
+        <init-param>
+            <param-name>activeReverseAjaxEnabled</param-name>
+            <param-value>true</param-value>
+        </init-param>
+        <init-param>
+           <param-name>initApplicationScopeCreatorsAtStartup</param-name>
+           <param-value>true</param-value>
+        </init-param>
+     <!--     <init-param>
+            <param-name>maxWaitAfterWrite</param-name>
+            <param-value>3000</param-value>
+        </init-param>-->
+    </servlet>
+    <servlet-mapping>
+    	<servlet-name>dwr-invoker</servlet-name>
+    	<url-pattern>/dwr/*</url-pattern>
+    </servlet-mapping>
 </web-app>
