--- a/pom.xml
+++ b/pom.xml
@@ -326,7 +326,23 @@
 			<version>1.2</version>
 		</dependency>
 		<!-- OTHER TOOLS end -->
-		
+		<!-- amqb -->
+		<dependency>
+			<groupId>org.springframework.amqp</groupId>
+			<artifactId>spring-amqp</artifactId>
+			<version>1.0.0.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.amqp</groupId>
+			<artifactId>spring-rabbit</artifactId>
+			<version>1.0.0.RELEASE</version>
+		</dependency>
+		<!-- rabbitmq -->
+		<dependency>
+			<groupId>com.rabbitmq</groupId>
+			<artifactId>amqp-client</artifactId>
+			<version>2.8.6</version>
+		</dependency>
 		
 		<dependency>
 			<groupId>org.directwebremoting</groupId>
