fix artifact name to project.name

--- a/pom.xml
+++ b/pom.xml
@@ -351,4 +351,7 @@
 	  	 	<version>3.0.rc2</version>
 	  	</dependency>
 	</dependencies>
+    <build>
+        <finalName>${project.name}</finalName>
+    </build>
 </project>
