--- a/src/main/resources/config/rabbitmqConfig.properties
+++ b/src/main/resources/config/rabbitmqConfig.properties
@@ -1,4 +1,4 @@
-rabbitmq.ip=172.0.0.1
-rabbitmq.username=guest
-rabbitmq.password=guest
-rabbitmq.vhost=/
+rabbitmq.ip=127.0.0.1
+rabbitmq.username=crec
+rabbitmq.password=crec2014
+rabbitmq.vhost=crec
